--- a/public/components/adidasCartHome/view.html
+++ b/public/components/adidasCartHome/view.html
@@ -10,7 +10,7 @@
               <i class="fa fa-sign-out white-text d-inline-block align-top" rel="tooltip" title="Logout" style="font-size: 28px" ></i>
               
             </a>
-            <a class="navbar-brand pull-right"  style="padding:10px 20px;">
+            <a class="navbar-brand pull-right" onclick="demo.showSwal('checkout')" style="padding:10px 20px;">
               <i class="fa fa-shopping-bag white-text d-inline-block align-top" rel="tooltip" title="Go To Checkout" style="font-size: 28px" ></i>
               <span class="notification">3</span>
               
@@ -44,8 +44,10 @@
           <strong>
             <a href="" class="dark-grey-text">${data[i].cartItem} </a>
             #if(data[i].saleType == 1){#
-            <span class="badge badge-pill danger-color">BEST</span>
-            #}#
+            <span class="badge badge-pill info-color">DESIGNER</span>
+            #} else if(data[i].saleType == 2){#
+              <span class="badge badge-pill danger-color">NEW</span>
+              #}#
             
             
           </strong>
@@ -57,9 +59,9 @@
                   <strong>${data[i].price}</strong></h2>
               </div>
               <div class="pull-right">
-                  <button class="btn btn-just-icon btn-simple btn-google" style="padding:0">
+                  <button class="btn btn-just-icon btn-simple btn-google" onclick="demo.showSwal('trace')" style="padding:0">
                     <i class="fa fa-link" style="font-size:20px" rel="tooltip" title="Show History"> </i> </button>
-                    <button class="btn btn-just-icon btn-simple btn-twitter" style="padding:0">
+                    <button class="btn btn-just-icon btn-simple btn-twitter"  style="padding:0">
                         <i class="fa fa-shopping-bag" style="font-size:20px" rel="tooltip" title="Add to Bag"> </i> </button>
               </div>
         </div>
