--- a/public/components/adidasItemCreateHome/view.html
+++ b/public/components/adidasItemCreateHome/view.html
@@ -2,14 +2,6 @@
     <div class="wrapper">
         <div class="dashboard-page" data-image="img/adidas_bg.jpg">
             <div class="main-panel" style="background: url('img/dash.jpeg');">
-                <nav class="navbar navbar-transparent navbar-absolute">
-                    <div class="container-fluid">
-                        <div class="navbar-header">
-                            <a id="back-button" class="nav-button pull-right" data-align="left" style="background-color:transparent;color:white;border-color:white; margin-right:10px" data-role="backbutton">Back</a>
-                            <a class="navbar-brand"><h4 style="color:white">Spend Tracker</h4></a>
-                        </div>
-                    </div>
-                </nav>
 
                 <div class="content">
                     <div class="container-fluid">
@@ -22,7 +14,7 @@
 
                                         <div class="wizard-header">
                                             <h3 class="wizard-title">
-                                                Add a Spend
+                                                Create Shoe
                                             </h3>
                                         </div>
                                         <div class="wizard-navigation">
