--- a/public/components/adidasItemCreateHome/view.html
+++ b/public/components/adidasItemCreateHome/view.html
@@ -1,8 +1,7 @@
 <div data-role="view" data-title="AdidasItemCreateHome" data-layout="main-nonav" data-model="app.adidasItemCreateHome" data-show="app.adidasItemCreateHome.onShow" data-after-show="app.adidasItemCreateHome.afterShow" id="adidasItemCreateScreen" class="screen">
     <div class="wrapper">
         <div class="dashboard-page" data-image="img/adidas_bg.jpg">
-            <div class="main-panel" style="background: url('img/dash.jpeg');">
-
+            <div class="main-panel" style="width:100%">
                 <div class="content">
                     <div class="container-fluid">
                         <div class="col-sm-8 col-sm-offset-2">
@@ -29,11 +28,62 @@
                                             <div class="tab-pane" id="mycategory">
                                                 <div class="row">
                                                     <div class="col-lg-10 col-lg-offset-1">
-                                                        <div class="table-responsive">
-                                                            <table class="table">
-                                                                <tbody id="categorylist"></tbody>
-                                                            </table>
-                                                        </div>
+                                                            <div class="row">
+                                                                
+                                                                <div class="col-lg-12">
+                                                                        <div class="table-responsive">
+                                                                                <table class="table">
+                                                                                    <tbody id="categorylist"></tbody>
+                                                                                </table>
+                                                                        </div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                    <div class="col-sm-6">
+                                                                        <div class="input-group">
+                                                                            <span class="input-group-addon">
+                                                                                <i class="material-icons">zoom_out_map</i>
+                                                                            </span>
+                                                                            <div class="form-group label-floating">
+                                                                                    <select class="form-control">
+                                                                                            <option selected>Enter Size</option>
+                                                                                            <option value="1">One</option>
+                                                                                            <option value="2">Two</option>
+                                                                                            <option value="3">Three</option>
+                                                                                    </select>
+                                                                            </div>
+                                                                        </div>
+                
+                                                                        <div class="input-group">
+                                                                            <span class="input-group-addon">
+                                                                                <i class="material-icons">color_lens</i>
+                                                                            </span>
+                                                                            <div class="form-group label-floating">
+                                                                                    <select class="form-control">
+                                                                                            <option selected>Enter color</option>
+                                                                                            <option value="1">One</option>
+                                                                                            <option value="2">Two</option>
+                                                                                            <option value="3">Three</option>
+                                                                                    </select>
+                                                                            </div>
+                                                                        </div>
+                
+                                                                        <div class="input-group">
+                                                                            <span class="input-group-addon">
+                                                                                <i class="material-icons">date_range</i>
+                                                                            </span>
+                                                                            <div class="form-group">
+                                                                                    <select class="form-control">
+                                                                                            <option selected>Technology</option>
+                                                                                            <option value="1">One</option>
+                                                                                            <option value="2">Two</option>
+                                                                                            <option value="3">Three</option>
+                                                                                    </select>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+
                                                     </div>
                                                 </div>
                                             </div>
@@ -147,11 +197,11 @@
 
         <td width="25%">
             <div class="choice" data-toggle="wizard-radio">
-                <input type="radio" name="category" value="${data[i].category}">
+                <input type="radio" name="category" value="${data[i].itemValue}">
                 <div class="icon">
-                    <img src="${data[i].img}" />
+                    <img src="${data[i].img}" class="itemIcon"/>
                 </div>
-                <h6>${data[i].category}</h6>
+                <h6>${data[i].itemType}</h6>
             </div>
         </td>
         #if (j == 4){ j =0;#
