--- a/public/components/adidasItemCreateHome/view.html
+++ b/public/components/adidasItemCreateHome/view.html
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <a href="javascript:void(0)" data-bind="click: spendModel.showInventory">
                             <i class="material-icons">assignments</i>
                             <span class="notification" data-bind="text : spendModel.inventory"></span>
                             <p class="hidden-lg hidden-md">
@@ -23,6 +23,7 @@
                                 <b class="caret"></b>
                             </p>
                         </a>
+
                     </li>
                     
                 </ul>
@@ -54,7 +55,7 @@
                                                     <!--
                                                         color-classes: "nav-pills-primary", "nav-pills-info", "nav-pills-success", "nav-pills-warning","nav-pills-danger"
                                                     -->
-                                                    <li class="active">
+                                                    <li>
                                                         <a href="#dashboard-2" role="tab" data-toggle="tab">
                                                             <i class="material-icons">dashboard</i>
                                                             Manufacturing
@@ -78,7 +79,7 @@
                             
                                                                     <div class="wizard-header">
                                                                         <h3 class="wizard-title">
-                                                                            Create Shoe
+                                                                            Create Sneaker
                                                                         </h3>
                                                                     </div>
                                                                     <div class="wizard-navigation">
@@ -172,6 +173,8 @@
                                                                     </div>
                                                                     <div class="wizard-footer">
                                                                         <div class="pull-right">
+                                                                            <div id="qrcode"></div>
+
                                                                             <input type='button' class='btn btn-next btn-fill btn-rose btn-wd' name='next' value='Next' />
                                                                             <input type='button' id="finish" class='btn btn-finish btn-fill btn-rose btn-wd' data-bind="events:{click: spendModel.createSneaker}" name='finish'
                                                                                 value='Finish' />
@@ -290,12 +293,6 @@
                 <col style="width:180px" />
                 <col style="width:400px" />
             </colgroup>
-            <thead>
-                <tr>
-                    <th data-field="channel">Channel Header</th>
-                    <th data-field="value"></th>
-                </tr>
-            </thead>
             <tbody>
                 <tr>
                     <td>Version</td>
@@ -324,17 +321,11 @@
 
 
     <hr/>
-    <table id="grid1">
+    <table id="grid1" class"table">
             <colgroup>
                 <col style="width:180px" />
                 <col style="width:400px" />
             </colgroup>
-            <thead>
-                <tr>
-                    <th data-field="channel">Payload</th>
-                    <th data-field="value"></th>
-                </tr>
-            </thead>
             <tbody>
                 <tr>
                     <td>Key</td>
