--- a/public/components/adminHome/view.html
+++ b/public/components/adminHome/view.html
@@ -1,6 +1,6 @@
 <div data-role="view" data-title="Admin"  data-layout="main-nonav" data-model="app.admin" data-show="app.admin.onShow" data-after-show="app.admin.afterShow" id="adminScreen" class="screen">
     <header class="header">
-        <span class="header-logo">Food Safety - Blockchain Admin</span>
+        <span class="header-logo">Blockchain Admin</span>
     </header>
     <div class="content">
         <div class="content-heading">
