designer page dynamic

--- a/public/components/adidasDesignerHome/view.html
+++ b/public/components/adidasDesignerHome/view.html
@@ -21,7 +21,7 @@
 <section class="text-center my-5" style="padding:4vw 8vw">
     <div class="row" id="cartlist">
     </div>
-    
+    	
   </section>
   
 </div>
@@ -41,7 +41,7 @@
               <button type="button" class="btn btn-default btn-simple" rel="tooltip" data-placement="bottom"   title="View">
                 <i class="material-icons">art_track</i>
               </button>
-              <button type="button" class="btn btn-success btn-simple" rel="tooltip" data-placement="bottom" onclick="demo.showSwal('checkout')" title="Edit">
+              <button type="button" class="btn btn-success btn-simple" rel="tooltip" data-placement="bottom" onclick="demo.showSwal('designer')" title="Edit">
                 <i class="material-icons">edit</i>
               </button>
               <button type="button" class="btn btn-danger btn-simple" rel="tooltip" data-placement="bottom" title="Remove">
