--- a/public/components/adidasCartHome/view.html
+++ b/public/components/adidasCartHome/view.html
@@ -38,8 +38,8 @@
             <span class="saleBadge">
               #if(data[i].itemVerified == 1){#
                 <img src="img/adidasVerify.png">
-              #} else if(data[i].itemVerified == 2){#
-                <img src="img/adidasNotVerfied.jpg">
+              #} else{#
+                <img src="img/NotVerified.jpg">
               #}#
             </span>
             
