--- a/public/components/adidasCartHome/view.html
+++ b/public/components/adidasCartHome/view.html
@@ -22,10 +22,10 @@
     <div class="row" id="cartlist">
     </div>
 
-  </section>
-  
-</div>
-<script type="text/x-kendo-template" id="cartlistTemplate">
+  </section>Adidas
+  Adidas
+</div>Adidas
+<script type="text/x-kendoAdidas-template" id="cartlistTemplate">
 
   #for(var i=0;i <data.length;i++){#
   <div class="col-md-3">
@@ -39,7 +39,7 @@
               #if(data[i].itemVerified == 1){#
                 <img src="img/adidasVerify.png">
               #} else{#
-                <img src="img/NotVerified.jpg">
+                <img src="img/NotVerified.png">
               #}#
             </span>
             
