--- a/public/components/adidasItemCreateHome/view.html
+++ b/public/components/adidasItemCreateHome/view.html
@@ -10,7 +10,9 @@
                     <span class="icon-bar"></span>
                 </button>
     
-                <a class="navbar-brand" href="/">Adidas</a>
+                <a class="navbar-brand" href="/">
+                    <img src="img/adidas_logo.png" height="80" alt="adidas logo">
+                </a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
