--- a/public/components/adminHome/view.html
+++ b/public/components/adminHome/view.html
@@ -1,49 +1,70 @@
 <div data-role="view" data-title="Admin"  data-layout="main-nonav" data-model="app.admin" data-show="app.admin.onShow" data-after-show="app.admin.afterShow" id="adminScreen" class="screen">
-    <header class="header">
-        <span class="header-logo">Blockchain Admin</span>
-    </header>
-    <div class="content">
-        <div class="content-heading">
-        
+<nav class="navbar navbar-primary navbar-transparent navbar-absolute">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <a class="navbar-brand" href="/">Adidas Admin</a>
         </div>
-        <div class="content-inner">
-            <div class="container">
-                <div class="row">
-                <br/><br/>
-                <h2 class="heading">Admin Console</h2>
-                 <div id="window">
-                	<div id="channelHeader"></div>
-                	<div id="payload"></div>
-                </div>
-                <div class="col-sm-4">
-	                <div class="demo-section k-content">
-				        <div class="loading">
-				            <div id="totalProgressBar"></div>
-				            <div id="loadingProgressBar"></div>
-				        </div>
-				        <div class="loadingInfo">
-				            <h4>Current Blocks</h4>
-				            <div class="statusContainer">
-				                <p>
-				                Loaded: <span class="loadingStatus">0%</span> <br />
-				                Block(s) <span class="chunkStatus" data-bind="text : adminModel.blockloaded">0</span> of <span data-bind="text : adminModel.blockheight"></span>
-				                </p>
-				            </div>
-				            <a data-role="button" class="reloadButton" data-icon="refresh" data-animated="true" class="km-primary" data-bind="events: {click : adminModel.refresh}"></a>
-				        </div>
-				    </div>
-                </div>
-                </div>
-                <hr/>
-                <div class="row">
-	                <div class="col-sm-12">
-	                	<ul id="listview" class="admin"></ul>
-	                	
-	                </div>
+    </div>
+</nav>
+<div class="wrapper">
+        <div class="dashboard-page" data-image="img/adidas_bg.jpg">
+            <div class="main-panel" style="width:100%">
+                <div class="content">
+                    <div class="container-fluid">
+                        <div class="col-md-8 col-md-offset-2" id="transfercol">
+                            <div class="card">
+                                <div class="card-header card-header-icon" data-background-color="green">
+                                    <i class="material-icons">assignment</i>
+                                </div>
+                                <div class="card-content" style="padding:20px">
+                                    <h4 class="card-title">Blockchain Adminstrator View</h4>
+                                    <div class="row">
+                                             <div id="window" class="hide">
+                                                <div id="channelHeader"></div>
+                                                <div id="payload"></div>
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <div class="demo-section k-content">
+                                                    <div class="loading">
+                                                        <div id="totalProgressBar"></div>
+                                                        <div id="loadingProgressBar"></div>
+                                                    </div>
+                                                    <div class="loadingInfo">
+                                                        <h4>Current Blocks</h4>
+                                                        <div class="statusContainer">
+                                                            <p>
+                                                            Loaded: <span class="loadingStatus">0%</span> <br />
+                                                            Block(s) <span class="chunkStatus" data-bind="text : adminModel.blockloaded">0</span> of <span data-bind="text : adminModel.blockheight"></span>
+                                                            </p>
+                                                        </div>
+                                                        <a data-role="button" class="reloadButton" data-icon="refresh" data-animated="true" class="km-primary" data-bind="events: {click : adminModel.refresh}"></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            </div>
+                                            <hr/>
+                                            <div class="row">
+                                                <div class="col-sm-12">
+                                                    <ul id="listview" class="admin"></ul>
+                                                    
+                                                </div>
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+</div>
 </div>
 <script type="text/x-kendo-template" id="blocktemplate">
     <a data-role="button" class="km-primary km-button-right km-icon-button"><span class="km-icon km-edit"></span></a>
