--- a/public/components/TransferHome/view.html
+++ b/public/components/TransferHome/view.html
@@ -1,4 +1,4 @@
-<div data-role="view" data-title="AdidasTransferHome" data-layout="main-nonav" data-model="app.adidasTransferHome"
+<div data-role="view" data-title="Transfer Home" data-layout="main-nonav" data-model="app.adidasTransferHome"
     data-show="app.adidasTransferHome.onShow" data-after-show="app.adidasTransferHome.afterShow" id="adidasTransferScreen"
     class="screen">
 
@@ -12,7 +12,7 @@
                         <span class="icon-bar"></span>
                     </button>
         
-                    <a class="navbar-brand" href="/">Adidas Transfer</a>
+                    <a class="navbar-brand" href="/">Transfer</a>
                 </div>
             </div>
         </nav>
@@ -36,8 +36,8 @@
                                                     <div class="col-md-6">
                                                         <label class="floating-label" for="source">Select Source</label>
                                                         <select id="source" class="form-control" style="width: 100%;">
-                                                            <option value="adidas">Adidas</option>
-                                                            <option value="Factory">Adidas Factory</option>
+                                                            <option value="nike">Nike</option>
+                                                            <option value="Factory">Nike Factory</option>
                                                             <option value="Wholesale">Wholesale</option>
                                                         </select>
                                                     </div>
@@ -50,7 +50,7 @@
                                                     <div class="col-md-6">
                                                         <label class="floating-label" for="sender">Select Receiver</label>
                                                         <select id="sender" class="form-control" style="width: 100%;">
-                                                            <option value="Factory">Adidas Factory</option>
+                                                            <option value="Factory">Nike Factory</option>
                                                             <option value="E-Commerce">E-Commerce</option>
                                                             <option value="Wholesale">Wholesale</option>
                                                         </select>
