--- a/public/components/adminHome/view.html
+++ b/public/components/adminHome/view.html
@@ -9,12 +9,12 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="/">Adidas Admin</a>
+            <a class="navbar-brand" style="color: black" href="/">Admin</a>
         </div>
     </div>
 </nav>
 <div class="wrapper">
-        <div class="dashboard-page" data-image="img/adidas_bg.jpg">
+        <div class="dashboard-page" data-image="">
             <div class="main-panel" style="width:100%">
                 <div class="content">
                     <div class="container-fluid">
