--- a/public/components/CartHome/view.html
+++ b/public/components/CartHome/view.html
@@ -1,9 +1,9 @@
-<div data-role="view" data-title="AdidasCartHome" data-layout="main-nonav" data-model="app.adidasCartHome" data-show="app.adidasCartHome.onShow" data-after-show="app.adidasCartHome.afterShow" id="adidasCartHomeScreen" class="screen">
+<div data-role="view" data-title="Cart Home" data-layout="main-nonav" data-model="app.adidasCartHome" data-show="app.adidasCartHome.onShow" data-after-show="app.adidasCartHome.afterShow" id="adidasCartHomeScreen" class="screen">
     <!-- Section: Products v.1 -->
     <!-- Image and text -->
     <nav class="navbar navbar-dark elegant-color">
-            <a class="navbar-brand" data-bind="events:{click : cartModel.logout}"  style="padding:0 20px">
-              <img src="img/adidas_logo.png" height="70" alt="adidas logo">
+            <a class="navbar-brand white-text" data-bind="events:{click : cartModel.logout}"  style="padding:0 20px">
+              E-commerce Website
             </a>
             
             <a class="navbar-brand pull-right" data-bind="events:{click : cartModel.logout}"  style="padding:10px 20px;">
@@ -12,7 +12,7 @@
             </a>
             <a class="navbar-brand pull-right" onclick="demo.showSwal('checkout')" style="padding:10px 20px;">
               <i class="fa fa-shopping-bag white-text d-inline-block align-top" rel="tooltip" title="Go To Checkout" style="font-size: 28px" ></i>
-              <span class="notification">3</span>
+              <span class="notification" id="notification">0</span>
               
             </a>
 
@@ -67,10 +67,10 @@
               </div>
               <div class="pull-right">
                   #if(data[i].itemVerified == 1){#
-                <button type="button" class="btn btn-just-icon btn-simple btn-google" onclick="demo.showSwal('block-html',${data[i].data})" style="padding:0">
+                <button type="button" class="btn btn-just-icon btn-simple btn-google" onclick="demo.showSwal('block-html',${data[i].data})"  style="padding:0">
                     <i class="fa fa-link" style="font-size:20px" rel="tooltip" title="Show History"> </i> </button>
                   #}#
-                    <button class="btn btn-just-icon btn-simple btn-twitter"  style="padding:0">
+                    <button class="btn btn-just-icon btn-simple btn-twitter"  style="padding:0" onclick="demo.addToCart('${data[i].barcode}','${data[i].itemVerified}');">
                         <i class="fa fa-shopping-bag" style="font-size:20px" rel="tooltip" title="Add to Bag"> </i> </button>
               </div>
         </div>
