--- a/public/components/home/view.html
+++ b/public/components/home/view.html
@@ -1,6 +1,6 @@
 <div data-role="view" data-title="Home" data-layout="main-nonav" data-model="app.home" data-show="app.home.onShow" data-after-show="app.home.afterShow" id="homeScreen" class="screen">
     <div class="wrapper wrapper-full-page">
-        <div class="full-page login-page" filter-color="black" data-image="img/adidas_bg.jpg">
+        <div class="full-page login-page" filter-color="black" data-image="">
             <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
             <div class="content">
                 <div class="container">
