--- a/public/components/trace/view.html
+++ b/public/components/trace/view.html
@@ -14,7 +14,7 @@
                             <div class="col-md-12">
                                 <div class="card">
                                     <div class="card-header">
-                                        <h4 class="card-title">Adidas</h4>
+                                        <h4 class="card-title">Nike</h4>
                                     </div>
                                     <div class="card-content">
                                         <div class="row">
@@ -125,9 +125,8 @@
 </script>
 <script type="text/x-kendo-template" id="payloadTemplate">
 
-
     <hr/>
-    <table id="grid1" class"table">
+    <table id="grid1" class"table" style="width:100%">
             <colgroup>
                 <col style="width:180px" />
                 <col style="width:400px" />
@@ -137,14 +136,21 @@
                     <td>Key</td>
                     <td>Value</td>
                 </tr>
-                # for (var i=0 ; i < data.rwset.writes.length; i++){ var data1 = data.rwset.writes[i]; #
-# console.log(data1); #
+                # for (var i=0 ; i < data.pay.rwset.writes.length; i++){ var data1 = data.pay.rwset.writes[i]; #
                  <tr>
                     <td>${data1.key}</td>
-                    <td>${data1.value}</td>
+                    <td>#var value= data1.value; value = value.replace(/adidas/g,"nike");  # 
+                    # if (data1.key == data.key){ value = JSON.parse(value); #
+                        <table class="table">
+                            <tr><td>Model - Type</td><td>Color</td><td>Material</td><td>Manufacter Date</td></tr>
+                            <tr><td>${value.sneakermodel} - ${value.sneakertype}</td><td>${value.color}</td><td>${value.material}</td><td>${value.manufacturedate}</td></tr>
+                        </table>
+                    #} else{#
+                        ${value}
+                    #}#
+                </td>
                 </tr>
                 #}#
-
             </tbody>
     <table>
 </script>
